<?xml version="1.0" encoding="utf-8"?>
<com.xxun.watch.xunpet.view.DragLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xxun.watch.xunpet.activity.XunPetRankActivity">

    <RelativeLayout
        android:layout_width="@dimen/screen_width"
        android:layout_height="@dimen/screen_height"
        android:layout_centerInParent="true"
        android:background="@drawable/pet_feed_bg">

        <RelativeLayout
            android:id="@+id/layout_petrank_level"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rank_item_height"
            android:layout_marginTop="@dimen/rank_item_margin_top">
            <TextView
                android:id="@+id/tv_petrank_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/pet_rank_level_one"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_step" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_local_rank"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rank_item_height"
            android:layout_below="@id/layout_petrank_level"
            android:layout_marginTop="@dimen/rank_item_interval">
            <TextView
                android:id="@+id/tv_local_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rank_item_margin_start"
                android:text="@string/local_city_default"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_step" />
            <TextView
                android:id="@+id/tv_local_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/rank_item_margin_end"
                android:text="@string/local_city_rank"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_step" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_all_rank"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rank_item_height"
            android:layout_below="@id/layout_local_rank"
            android:layout_marginTop="@dimen/rank_item_interval">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rank_item_margin_start"
                android:text="@string/whole_country"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_step" />
            <TextView
                android:id="@+id/tv_all_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/rank_item_margin_end"
                android:text="@string/whole_country_rank"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_step" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_xunpet_exper_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/progress_margin_start"
            android:layout_marginTop="@dimen/progress_margin_top"
            android:background="@drawable/pet_step_progress" />

        <TextView
            android:id="@+id/tv_xunpet_exper_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pet_experience_need"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_step" />
    </RelativeLayout>

</com.xxun.watch.xunpet.view.DragLayout>
